# property-manager

./: .gitignore  README.md  context_loader.py  inbox.py  logger.py  main.py  parser.py  pyproject.toml  reply_generator.py  rule_parser.py  sender.py  validator.py  workflow.py
action_items/: 89ee908734.json  8d0444d055.json  a28d887a5d.json
tests/: test_inbox.py  test_parser.py  test_reply_generator.py  test_sender.py  test_workflow.py
